--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--STYLES SECTION-->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="desktop.css">
 
     <title>Ilescas Tech</title>
 </head>
@@ -24,7 +24,15 @@
                 <ol class="navigation_menu">
                     <li class="navigation_item">
                         <span></span>
-                        <a href=""></a>
+                        <a href="">About</a>
+                    </li>
+                    <li class="navigation_item">
+                        <span></span>
+                        <a href="">Eperience</a>
+                    </li>
+                    <li class="navigation_item">
+                        <span></span>
+                        <a href="">Projects</a>
                     </li>
                 </ol>
             </nav>
