--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--STYLES SECTION-->
-    <link rel="stylesheet" href="desktop.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./Elements/Info-Card/info-card.css">
+    <link rel="stylesheet" href="./Elements/Info-Card-Projects/styles.css">
+
+    <!--GOOGLE FONT-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <title>Ilescas Tech</title>
 </head>
@@ -34,8 +39,30 @@
             </div>
         </section>
         <section class="secondary-container">
-            <main class="info-container">
+            
+            <main class="info-container" >
+                <article class="section-about">
+                    <p>
+                        I’m a developer passionate about crafting accessible, pixel-perfect user interfaces that blend thoughtful design with robust engineering. My favorite work lies at the intersection of design and development, creating experiences that not only look great 
+                        In the past, I've had the opportunity to develop software across a variety of settings — from advertising agencies and large corporations to start-ups and small digital product studios. Additionally, I also released a comprehensive video course a few years ago, guiding learners through building a web app with the Spotify API.
+                    </p>
+                    <p>
+                        but are meticulously built for performance and usability.
+                        Currently, I'm a Senior Front-End Engineer at Klaviyo, specializing in accessibility. I contribute to the creation and maintenance of UI components that power Klaviyo’s frontend, ensuring our platform meets web accessibility standards and best practices to deliver an inclusive user experience.
 
+                    </p>
+
+                </article>
+                <h2 class="section-header">Experience</h2>
+                <div class="info-section-structure" id="info-experience-container"></div>
+                <h2 class="section-header">Projects</h2>
+                <div class="info-secction-structure" id="info-projects-container">
+                    <div class="info-card-projects">
+                        <h3 style="font-family: Orbitron; text-align: center; width: 100%; color: #ebecf1; " >
+                            COMMING SOON...
+                        </h3>
+                    </div>
+                </div>
             </main>
         </section>
     </div>
@@ -44,5 +71,5 @@
 
     
 </body>
-<script type="module" src="./JavaScript/Info-Card/info-card.js"></script>
+<script type="module" src="./Elements/Info-Card/info-card.js"></script>
 </html>
