--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -26,9 +26,15 @@
                 </h2>
             </header>
             <nav>
-                <ol class="navigation_menu">
-                    <li class="navigation_item">
-                        <a href=""><span></span>About</a>
+                <ol >
+                    <li>
+                        <a href="" class="nav-item"><span class="dash-green"></span>About</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav-item"><span class="dash-green"></span> Experience</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav-item"><span class="dash-green"></span>Projects</a>
                     </li>
                 </ol>
             </nav>
@@ -38,10 +44,12 @@
                 </ol>
             </div>
         </section>
-        <section class="secondary-container">
+        <section class="secondary-container" id="content-container">
             
-            <main class="info-container" >
-                <article class="section-about">
+            <main class="info-container"  >
+                <h2 class="section-header">About Me</h2>
+
+                <article class="section-about" id="info-about-container">
                     <p>
                         I’m a developer passionate about crafting accessible, pixel-perfect user interfaces that blend thoughtful design with robust engineering. My favorite work lies at the intersection of design and development, creating experiences that not only look great 
                         In the past, I've had the opportunity to develop software across a variety of settings — from advertising agencies and large corporations to start-ups and small digital product studios. Additionally, I also released a comprehensive video course a few years ago, guiding learners through building a web app with the Spotify API.
@@ -54,10 +62,12 @@
 
                 </article>
                 <h2 class="section-header">Experience</h2>
-                <div class="info-section-structure" id="info-experience-container"></div>
-                <h2 class="section-header">Projects</h2>
-                <div class="info-secction-structure" id="info-projects-container">
-                    <div class="info-card-projects">
+                <div class="info-section-structure" id="info-experience-container">
+                    <!-- AUTO GENERATED CONTENT -->
+                </div>
+                <h2 class="section-header" id="info-projects-container">Projects</h2>
+                <div class="info-section-structure" id="info-projects-container">
+                    <div class="info-card">
                         <h3 style="font-family: Orbitron; text-align: center; width: 100%; color: #ebecf1; " >
                             COMMING SOON...
                         </h3>
@@ -72,4 +82,6 @@
     
 </body>
 <script type="module" src="./Elements/Info-Card/info-card.js"></script>
+<script src="./index.js"></script>
+<script src="../Animations/Slide-Right/app.js"></script>
 </html>
