--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -25,10 +25,10 @@
                     Full-Stack Dev.
                 </h2>
             </header>
-            <nav>
+            <nav id="nav-bar-menu">
                 <ol >
                     <li>
-                        <a href="" class="nav-item"><span class="dash-green"></span>About</a>
+                        <a href="" class="nav-item"><span class="dash-green active"></span>About</a>
                     </li>
                     <li>
                         <a href="" class="nav-item"><span class="dash-green"></span> Experience</a>
@@ -38,16 +38,17 @@
                     </li>
                 </ol>
             </nav>
-            <div>
+            <div class="social-media">
                 <ol>
-                    <li><i></i></li>
+                    <li><a href="https://github.com/Nathanilescas" target="_blank"><img src="../Images/Github-Icon/GitHub-Icon-LightGray.png" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/nathan-ilescas-dev/" target="_blank"><img src="../Images/LinkedIn-Icon/LinkedIn-Icon-LightGray.png" alt=""></a></li>
                 </ol>
             </div>
         </section>
-        <section class="secondary-container" id="content-container">
+        <section class="secondary-container" id="main-content-container"
             
             <main class="info-container"  >
-                <h2 class="section-header">About Me</h2>
+                <h2 class="section-header" id="content-container">About Me</h2>
 
                 <article class="section-about" id="info-about-container">
                     <p>
@@ -82,6 +83,6 @@
     
 </body>
 <script type="module" src="./Elements/Info-Card/info-card.js"></script>
-<script src="./index.js"></script>
+<script src="./Elements/Nav-Bar/nav-menu.js"></script>
 <script src="../Animations/Slide-Right/app.js"></script>
 </html>
