working on mobile

--- a/Front-End/HomePage/index.html
+++ b/Front-End/HomePage/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--STYLES SECTION-->
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="./Elements/Info-Card/info-card.css">
+
+    <!--DESKTOP STYLES-->
+    <link rel="stylesheet" href="index-desktop.css" media="screen and (min-width: 769px)">
+    <link rel="stylesheet" href="./Elements/Info-Card/info-card-desktop.css" media="screen and (min-width: 769px)">
+
+    <!--MOBILE STYLES-->
+    <link rel="stylesheet" href="index-mobile.css" media="screen and (max-width: 450px)">
+    
     <link rel="stylesheet" href="./Elements/Info-Card-Projects/styles.css">
 
     <!--GOOGLE FONT-->
@@ -27,7 +33,7 @@
             </header>
             <nav id="nav-bar-menu">
                 <ol >
-                    <li>
+                    <li class="active">
                         <a href="" class="nav-item"><span class="dash-green active"></span>About</a>
                     </li>
                     <li>
